--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor of Science in Computer Scinece &amp; Engineering</h4>
+              <h4>Bachelor of Science in Computer Science &amp; Engineering</h4>
               <h5>2018 - 2021</h5>
               <p><em>American International University Bangladesh, Dhaka.</em></p>
               <p>CGPA: 3.97 in Scale of 4.00</p>
