--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </li>
                     <li class="nav_item">
                         <a href="#contact" class="nav__link">
-                            <i class="uil uil-message nav__icon"></i> Contactme
+                            <i class="uil uil-message nav__icon"></i> Contact
                         </a>
                     </li>
                 </ul>
