--- a/index.html
+++ b/index.html
@@ -241,6 +241,26 @@
                                 <span class="skills__percentage skills__laravel"></span>
                             </div> -->
                         </div>
+                        <div class="skills__data">
+                            <div class="skills__titles">
+                                
+                                <h3 class="skills__name"><i class="uil uil-arrow-right"></i>ASP.NET</h3>
+                                <!-- <span class="skills__number">80%</span> -->
+                            </div>
+                            <!-- <div class="skills__bar">
+                                <span class="skills__percentage skills__laravel"></span>
+                            </div> -->
+                        </div>
+                          <div class="skills__data">
+                            <div class="skills__titles">
+                                
+                                <h3 class="skills__name"><i class="uil uil-arrow-right"></i>EXPRESS</h3>
+                                <!-- <span class="skills__number">80%</span> -->
+                            </div>
+                            <!-- <div class="skills__bar">
+                                <span class="skills__percentage skills__laravel"></span>
+                            </div> -->
+                        </div>
 
                         <div class="skills__data">
                             <div class="skills__titles">
