--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                     <div class="home__data">
                         <h1 class="home_title">Hi, I'm Muzammel Hossain Chisty</h1>
-                        <h3 class="home__subtitle">Software Engineer</h3>
+                        <h3 class="home__subtitle">Software Engineer [BJIT]</h3>
                         <p class="home__description">High Level Experience in Web and Software Development & Proper
                             Knowledge of Producing Reusable Code Modules</p>
                         <a href="#contact" class="button button--flex">
@@ -513,12 +513,12 @@
                             <!-- qualification 1 ================ -->
                             <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification_title">Freelance Web Developer</h3>
-                                    <span class="qualification_subtitle">Freelancer
-                                    </span>
+                                    <h3 class="qualification_title">Software Engineer</h3>
+                                    <a href="https://bjitgroup.com" class="qualification_subtitle">BJIT
+                                    </a>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        Aug,2020-Continued
+                                        NOV,2021-Continued
                                     </div>
                                 </div>
                                 <div>
@@ -867,7 +867,7 @@
 
                         <div>
                             <h3 class="contact__title">Call Me</h3>
-                            <span class="contact__subtitle">+88 01959 137 247</span>
+                            <span class="contact__subtitle">Sorry ! Phone Number is a Personal Thing</span>
                         </div>
                     </div>
 
