--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                     <div class="home__data">
                         <h1 class="home_title">Hi, I'm Muzammel Hossain Chisty</h1>
-                        <h3 class="home__subtitle">Software Engineer [BJIT]</h3>
+                        <h3 class="home__subtitle">Software Engineer</h3>
                         <p class="home__description">High Level Experience in Web and Software Development & Proper
                             Knowledge of Producing Reusable Code Modules</p>
                         <a href="#contact" class="button button--flex">
